; ModuleID = '/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_extramath.c_FloatToHalf.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_extramath.c_FloatToHalf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.f32_u = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32, i64 }
%union.f16_u = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @FloatToHalf(float %0) #0 {
  %2 = alloca float, align 4
  %3 = alloca %union.f32_u, align 8
  %4 = alloca %union.f16_u, align 4
  store float %0, float* %2, align 4
  %5 = load float, float* %2, align 4
  %6 = bitcast %union.f32_u* %3 to float*
  store float %5, float* %6, align 8
  %7 = bitcast %union.f32_u* %3 to %struct.TYPE_3__*
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 2
  %9 = load i64, i64* %8, align 8
  %10 = trunc i64 %9 to i32
  %11 = sub nsw i32 %10, 112
  %12 = call i32 @CLAMP(i32 %11, i32 0, i32 31)
  %13 = bitcast %union.f16_u* %4 to %struct.TYPE_4__*
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 2
  store i32 %12, i32* %14, align 4
  %15 = bitcast %union.f32_u* %3 to %struct.TYPE_3__*
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = ashr i32 %17, 13
  %19 = bitcast %union.f16_u* %4 to %struct.TYPE_4__*
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 4
  %21 = bitcast %union.f32_u* %3 to %struct.TYPE_3__*
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = bitcast %union.f16_u* %4 to %struct.TYPE_4__*
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 1
  store i32 %23, i32* %25, align 4
  %26 = bitcast %union.f16_u* %4 to i32*
  %27 = load i32, i32* %26, align 4
  ret i32 %27
}

declare dso_local i32 @CLAMP(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
